--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,6 @@ DB_PASSWORD=Darpan@15
 DB_NAME=linkedin_mini
 JWT_SECRET=your_super_secret_key
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL="http://localhost:3000"
 
 
