fix frontend and backend url to add third time

--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,6 @@ DB_PASSWORD=Darpan@15
 DB_NAME=linkedin_mini
 JWT_SECRET=your_super_secret_key
 
-FRONTEND_URL=https://frontend-mini-linkedin-like-community-platform-1pjnjjduf.vercel.app
+FRONTEND_URL='https://frontend-mini-linkedin-like-community-platform-1pjnjjduf.vercel.app'
 
 
